gitops/clusters/de/hetzner/cluster/apps/hermes/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes
  namespace: hermes
spec:
  parentRefs:
    - name: gateway
      namespace: envoy-gateway-system
      sectionName: tls
  hostnames:
    - "hermes.internal.willpxxr.com"
  rules:
    - backendRefs:
        - name: hermes
          port: 9119
